--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/dataset/foggy_cityscape/
-/build/
-/dist/
-/involution_cuda.egg-info/
-/dataset/.ipynb_checkpoints/
-/dataset/__pycache__/
-/models/.ipynb_checkpoints/
-/models/__pycache__/
-/.ipynb_checkpoints/
-/csrc/.ipynb_checkpoints/
+dataset/foggy_cityscape/
+build/
+dist/
+involution_cuda.egg-info/
+dataset/.ipynb_checkpoints/
+dataset/__pycache__/
+models/.ipynb_checkpoints/
+models/__pycache__/
+.ipynb_checkpoints/
+csrc/.ipynb_checkpoints/
